add fastboard library and enable preview features in Java compiler